janet-check/src/syntax/snapshots/janet_check__syntax__tests__form_at_its_opening_delimiter.snap
---
source: src/syntax/tests.rs
expression: "|(a '(b c) # note\n d)"
---
----- SOURCE CODE
|(a '(b c) # note
 d)

----- FORMS AT CURSOR
par_tup_lit "(a '(b c) # note\n d)"
